# estm

./: README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release-macos.yml
src/: App.svelte  Settings.svelte  app.d.ts  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: .gitignore  icon.icns
src-tauri/src/: clipboard_watch.rs  db.rs  focus_restore.rs  lib.rs  main.rs  settings.rs
