[package]
name = "estm"
version = "0.1.0"
description = "ESTM — external short-term memory (clipboard helper)"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "estm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication", "libc"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSString"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
